Fix zindex of search on mobile

--- a/app/assets/stylesheets/elements/_header.scss
+++ b/app/assets/stylesheets/elements/_header.scss
@@ -26,18 +26,18 @@
 
   &--is-active {
     @media (max-width: 999px) {
+      position: fixed;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      position: fixed;
       top: 0;
       left: 0;
       padding: $margin calc(10vw - #{ $margin / 2 });
       width: 100%;
       height: 100vh;
       background: $bg-dark;
-      z-index: 10;
+      z-index: 50;
     }
   }
 }
