--- a/app/assets/stylesheets/elements/_search.scss
+++ b/app/assets/stylesheets/elements/_search.scss
@@ -98,7 +98,7 @@
 .search__tray {
   appearance: none;
   position: absolute;
-  bottom: 0;
+  bottom: 1px;
   left: 0;
   max-height: 0;
   transform: translateY(100%);
